--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,10 +62,20 @@ body {
   .lead h1 {
     margin: 0 0 30px 0;
     font-size: 6rem; }
-  .lead p {
+  .lead p, .lead li, .lead h3 {
     color: #5ff77b; }
-    .lead p:nth-child(-n+3) {
-      margin-bottom: 27px; }
+  .lead__discount {
+    display: inline-block;
+    padding: 15px;
+    margin-top: 20px;
+    border-radius: 20px;
+    background-color: #363636; }
+    .lead__discount h3 {
+      margin-bottom: 15px; }
+
+.lead-discount__list li {
+  margin-top: 5px;
+  list-style: none; }
 
 .about {
   margin-bottom: 6rem; }
@@ -195,7 +205,10 @@ body {
 /*MEDIA*/
 @media (max-width: 620px) {
   html {
-    font-size: 8px; } }
+    font-size: 8px; }
+
+  .lead h1 {
+    font-size: 4.5rem; } }
 @media (max-width: 414px) {
   html {
     font-size: 7px; }
