убрал outline у навигации

--- a/assets/libs/owlcarousel/assets/owl.theme.default.css
+++ b/assets/libs/owlcarousel/assets/owl.theme.default.css
@@ -78,3 +78,6 @@
     .owl-theme .owl-dots .owl-dot {
       outline: none;
     }
+    .owl-nav button.owl-next:focus, .owl-nav button.owl-prev{
+      outline: none;
+    }
